Standardisation des variables Docker dans docker-compose.yml
- Mise à jour du fichier scripts/ec2-monitoring/docker-compose.yml pour utiliser des variables d'environnement pour les noms d'images Docker
- Cohérence avec le fichier scripts/docker/monitoring/docker-compose.yml
- Utilisation de medsin et yourmedia-ecf pour les noms d'images

--- a/scripts/ec2-monitoring/docker-compose.yml
+++ b/scripts/ec2-monitoring/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   prometheus:
-    image: medsin/yourmedia-ecf:prometheus-latest
+    image: ${DOCKER_USERNAME:-medsin}/${DOCKER_REPO:-yourmedia-ecf}:prometheus-latest
     container_name: prometheus
     ports:
       - "9090:9090"
@@ -26,7 +26,7 @@ services:
     cpu_shares: 512
 
   grafana:
-    image: medsin/yourmedia-ecf:grafana-latest
+    image: ${DOCKER_USERNAME:-medsin}/${DOCKER_REPO:-yourmedia-ecf}:grafana-latest
     container_name: grafana
     ports:
       - "3000:3000"
@@ -71,7 +71,7 @@ services:
 
   # SonarQube pour l'analyse de code
   sonarqube:
-    image: medsin/yourmedia-ecf:sonarqube-latest
+    image: ${DOCKER_USERNAME:-medsin}/${DOCKER_REPO:-yourmedia-ecf}:sonarqube-latest
     container_name: sonarqube
     depends_on:
       - sonarqube-db
