Correction des problèmes d'initialisation des instances EC2 : répertoire /opt/yourmedia et configuration des exporters

--- a/scripts/ec2-monitoring/docker-compose.yml
+++ b/scripts/ec2-monitoring/docker-compose.yml
@@ -111,7 +111,7 @@ services:
     ports:
       - "9106:9106"
     volumes:
-      - /opt/monitoring/cloudwatch-config.yml:/config/cloudwatch-config.yml
+      - /opt/monitoring/cloudwatch-config:/config
     command:
       - --config.file=/config/cloudwatch-config.yml
     restart: always
