--- a/.github/workflows/3-docker-build-deploy.yml
+++ b/.github/workflows/3-docker-build-deploy.yml
@@ -352,7 +352,7 @@ jobs:
           if [[ "${{ github.event.inputs.target }}" == "all" || "${{ github.event.inputs.target }}" == "monitoring" ]]; then
             echo "* **Monitoring URL:** http://${{ secrets.TF_MONITORING_EC2_PUBLIC_IP }}:3000" >> $GITHUB_STEP_SUMMARY
             echo "* **Prometheus URL:** http://${{ secrets.TF_MONITORING_EC2_PUBLIC_IP }}:9090" >> $GITHUB_STEP_SUMMARY
-            echo "* **SonarQube URL:** http://${{ secrets.TF_SONARQUBE_EC2_PUBLIC_IP }}:9000" >> $GITHUB_STEP_SUMMARY
+            # SonarQube a été supprimé pour simplifier le projet
           fi
 
           if [[ "${{ github.event.inputs.target }}" == "all" || "${{ github.event.inputs.target }}" == "mobile" ]]; then
