--- a/scripts/utils/ssh-key-checker.service
+++ b/scripts/utils/ssh-key-checker.service
@@ -4,6 +4,9 @@ After=network.target
 
 [Service]
 Type=oneshot
-ExecStart=/usr/local/bin/fix-ssh-keys.sh
+ExecStart=/opt/scripts/utils/fix-ssh-keys.sh
 User=ec2-user
 Group=ec2-user
+
+[Install]
+WantedBy=multi-user.target
